--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using ProjectAveryFrontend
 @using ProjectAveryFrontend.Shared
+@using ProjectAveryFrontend.Shared.Components
