--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+<h3>Index</h3>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code {
+
+}
