--- a/Shared/Components/Sidebar.razor
+++ b/Shared/Components/Sidebar.razor
@@ -1,6 +1,18 @@
-﻿<div>
-    <div>
-        sidebar<br/>dummy
+﻿<div class="sidebar">
+    @* Part over server list *@
+
+    @* Server List *@
+    <div class="server-list">
+        @* Server *@
+        <div class="servers">
+
+        </div>
+
+        @* Controls *@
+        <div class="controls">
+            <IconButton IconChar="'I'" IconSize="19" Size="45"></IconButton>
+            <IconButton IconChar="'C'" IconSize="19" Size="45"></IconButton>
+        </div>
     </div>
 </div>
 
