--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,3 +9,4 @@
 @using ProjectAveryFrontend
 @using ProjectAveryFrontend.Shared
 @using ProjectAveryFrontend.Shared.Components
+@using ProjectAveryFrontend.Shared.Components.Buttons
