--- a/wwwroot/css/app.scss
+++ b/wwwroot/css/app.scss
@@ -1,4 +1,5 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import "colors";
 
 html, body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -66,5 +67,12 @@ a, .btn-link {
 }
 
 .loading-screen {
-  background-color: ;
+  color: $fork-label;
+  background-color: $fork-light;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
