--- a/Shared/Components/Sidebar.razor
+++ b/Shared/Components/Sidebar.razor
@@ -5,7 +5,14 @@
     <div class="server-list">
         @* Server *@
         <div class="servers">
-
+            @foreach (var entity in Entities)
+            {
+                <p>@entity.Name</p>
+            }
+            <!--Virtualize Items="Entities">
+            <p>context.Name</p>
+            <hr/>
+            </Virtualize-->
         </div>
 
         @* Controls *@
@@ -15,7 +22,3 @@
         </div>
     </div>
 </div>
-
-@code {
-
-}
