Added Tailwind css

--- a/Shared/Components/Buttons/IconButton.razor
+++ b/Shared/Components/Buttons/IconButton.razor
@@ -1,5 +1,5 @@
-﻿<div class="icon-button" style="@SizeString">
-    <span class="icon" style="font-size: @IconSizeString">@IconChar</span>
+﻿<div style="@SizeString">
+    <span style="font-size: @IconSizeString">@IconChar</span>
 </div>
 
 @code {
