--- a/Shared/Components/Navbar.razor
+++ b/Shared/Components/Navbar.razor
@@ -19,7 +19,7 @@
             </NavLink>
         </div>
         <div class="nav-item">
-            <NavLink class="nav-link" href="patreon">
+            <NavLink class="nav-link text-gray-600" href="patreon">
                 Patreon
             </NavLink>
         </div>
