Some initial Sailwind stuff

--- a/Shared/Components/Navbar.razor
+++ b/Shared/Components/Navbar.razor
@@ -1,25 +1,25 @@
-﻿<div class="navbar">
+﻿<div class="navbar w-full bg-forkBlue-light">
     @* Icon *@
 
     @* Options *@
-    <nav>
-        <div class="nav-item">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+    <nav class="flex content-center">
+        <div class="p-4">
+            <NavLink href="" Match="NavLinkMatch.All">
                 Servers
             </NavLink>
         </div>
-        <div class="nav-item">
-            <NavLink class="nav-link" href="settings">
+        <div class="p-4">
+            <NavLink href="settings">
                 Settings
             </NavLink>
         </div>
-        <div class="nav-item">
-            <NavLink class="nav-link" href="discord">
+        <div class="p-4">
+            <NavLink href="discord">
                 Discord
             </NavLink>
         </div>
-        <div class="nav-item">
-            <NavLink class="nav-link text-gray-600" href="patreon">
+        <div class="p-4">
+            <NavLink href="patreon">
                 Patreon
             </NavLink>
         </div>
