--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="main">
+<div class="main w-screen h-screen bg-forkBlue-dark">
     <Navbar/>
 
     @* Content *@
