Added Language Support

--- a/Shared/Components/Navbar.razor
+++ b/Shared/Components/Navbar.razor
@@ -1,26 +1,29 @@
-﻿<div class="navbar w-full bg-forkBlue-light">
+﻿@using ProjectAveryFrontend.Logic.Services.Translation
+@inject ITranslationService _translation
+
+<div class="navbar w-full bg-forkBlue-light">
     @* Icon *@
 
     @* Options *@
     <nav class="flex content-center">
         <div class="p-4">
             <NavLink href="" Match="NavLinkMatch.All">
-                Servers
+                <Translated Path="common.navbar.servers"></Translated>
             </NavLink>
         </div>
         <div class="p-4">
             <NavLink href="settings">
-                Settings
+                <Translated Path="common.navbar.settings"></Translated>
             </NavLink>
         </div>
         <div class="p-4">
             <NavLink href="discord">
-                Discord
+                <Translated Path="common.navbar.discord"></Translated>
             </NavLink>
         </div>
         <div class="p-4">
             <NavLink href="patreon">
-                Patreon
+                <Translated Path="common.navbar.patreon"></Translated>
             </NavLink>
         </div>
     </nav>
