--- a/Shared/EmptyLayout.razor
+++ b/Shared/EmptyLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="main">
-    <div class="content">
+<div>
+    <div class="">
         @Body
     </div>
 </div>
