Fixed up some UI stuff

--- a/Shared/Components/Buttons/IconButton.razor
+++ b/Shared/Components/Buttons/IconButton.razor
@@ -1,5 +1,5 @@
 ﻿<div style="@SizeString">
-    <span style="font-size: @IconSizeString">@IconChar</span>
+    <span class="icon" style="font-size: @IconSizeString">@IconChar</span>
 </div>
 
 @code {
