--- a/Shared/Components/Navbar.razor
+++ b/Shared/Components/Navbar.razor
@@ -5,7 +5,7 @@
     @* Icon *@
 
     @* Options *@
-    <nav class="flex content-center">
+    <nav class="flex content-center text-md font-bold">
         <div class="p-4">
             <NavLink href="" Match="NavLinkMatch.All">
                 <Translated Path="common.navbar.servers"></Translated>
