--- a/_Imports.razor
+++ b/_Imports.razor
@@ -10,3 +10,4 @@
 @using ProjectAveryFrontend.Shared
 @using ProjectAveryFrontend.Shared.Components
 @using ProjectAveryFrontend.Shared.Components.Buttons
+@using ProjectAveryFrontend.Shared.Components.Sidebar
