Framework update and IconButtons

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,14 @@
 ﻿@page "/"
 
+<div class="flex flex-1 mx-6 my-10 gap-4">
+    @* Sidebar *@
+    <Sidebar/>
+    @* Content *@
+    <div class="flex-1">
+        <h3>Index</h3>
+    </div>
+</div>
 
-<h3>Index</h3>
 
 @code {
 
