--- a/Shared/Components/Sidebar/Sidebar.razor
+++ b/Shared/Components/Sidebar/Sidebar.razor
@@ -1,6 +1,6 @@
 ﻿<div class="w-80 flex flex-col text-label">
     @* Part over server list *@
-    <div class="bg-forkBlue flex py-2 px-4 items-center">
+    <div class="bg-forkBlue flex py-3 px-4 items-center">
         <div class="flex-1 flex flex-col">
             <span class="text-md leading-none">v1.0.0</span>
             <span class="text-xs">You are up to date</span>
@@ -8,7 +8,7 @@
         @* TODO only show if update privilege is granted *@
         @if (true)
         {
-            <span class="icon">r</span>
+            <IconButton IconChar="'r'" IconSize="19" NoBackground="true" OnClickMethod="TestClickHandler"></IconButton>
         }
     </div>
 
@@ -23,9 +23,17 @@
         </div>
 
         @* Controls *@
-        <div class="flex justify-end">
+        <div class="flex justify-end gap-3 p-3">
             <IconButton IconChar="'I'" IconSize="19" Size="45"></IconButton>
             <IconButton IconChar="'C'" IconSize="19" Size="45"></IconButton>
         </div>
     </div>
 </div>
+
+@code
+{
+    private void TestClickHandler(IconButton button)
+    {
+        Console.WriteLine(button.IconChar);
+    }
+}
