--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,17 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="w-screen h-screen bg-forkBlue-dark flex flex-col">
+<div class="w-screen h-screen bg-forkBlue-dark flex flex-col select-none">
     <Navbar/>
 
-    @* Content *@
-    <div class="flex flex-1 mx-6 my-10 gap-4">
-        @* Sidebar *@
-        <Sidebar/>
-        @* Body *@
-        <div class="flex-1">
-            @Body
-        </div>
-    </div>
+    @Body
 </div>
 
 @code {
