Finished Sidebar for now

--- a/Shared/Components/Buttons/IconButton.razor
+++ b/Shared/Components/Buttons/IconButton.razor
@@ -1,4 +1,4 @@
-﻿<div style="@SizeString" class="icon-button cursor-pointer hover:text-label-hover @(NoBackground ? "text-text" : "text-text-dark bg-button") flex justify-center items-center" @onclick="ClickHandler">
+﻿<div style="@SizeString" class="icon-button cursor-pointer hover:text-label-hover @(NoBackground ? "text-text" : "text-text-darkest bg-button") flex justify-center items-center" @onclick="ClickHandler">
     <span class="icon" style="font-size: @IconSizeString">@IconChar</span>
 </div>
 
