--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,14 +1,17 @@
 ﻿@page "/"
 
-<div class="flex flex-1 mx-6 my-10 gap-4">
-    @* Sidebar *@
-    <Sidebar/>
-    @* Content *@
-    <div class="flex-1">
-        <h3>Index</h3>
+<CascadingValue Name="@nameof(SelectedEntity)" Value="SelectedEntity">
+    <div class="flex flex-1 mx-6 my-10 gap-4">
+        @* Sidebar *@
+        <CascadingValue Name="@nameof(Entities)" Value="Entities">
+            <Sidebar OnSelectEntity="OnSelectEntity"/>
+        </CascadingValue>
+        @* Content *@
+        <div class="flex-1">
+            <h3 class="text-text-green">Index</h3>
+        </div>
     </div>
-</div>
-
+</CascadingValue>
 
 @code {
 
