--- a/Shared/Components/Sidebar/Sidebar.razor
+++ b/Shared/Components/Sidebar/Sidebar.razor
@@ -1,7 +1,7 @@
 ﻿@using ProjectAveryCommon.Model.Entity.Pocos
-<div class="w-80 flex flex-col text-label">
+<div class="w-80 flex flex-col text-label overflow-hidden">
     @* Part over server list *@
-    <div class="bg-forkBlue flex py-3 px-4 items-center">
+    <div class="bg-forkBlue flex py-2 px-4 items-center" style="height: 50px">
         <div class="flex-1 flex flex-col">
             <span class="text-md leading-none">v1.0.0</span>
             <span class="text-xs">You are up to date</span>
@@ -14,7 +14,7 @@
     </div>
 
     @* Server List *@
-    <div class="bg-forkBlue-light flex-1 mt-5 flex flex-col">
+    <div class="bg-forkBlue-light flex-1 mt-5 flex flex-col overflow-y-auto scroll-left">
         @* Server *@
         <div class="flex-1">
             @if (Entities != null)
