--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,7 +9,10 @@
 @using ProjectAveryFrontend
 @using ProjectAveryFrontend.Shared
 @using ProjectAveryFrontend.Shared.Components
+@using ProjectAveryFrontend.Shared.Components.Inputs
 @using ProjectAveryFrontend.Shared.Components.Entity
+@using ProjectAveryFrontend.Shared.Components.Entity.Tabs
+@using ProjectAveryFrontend.Shared.Components.Entity.Tabs.ConsoleTab
 @using ProjectAveryFrontend.Shared.Components.Shared
 @using ProjectAveryFrontend.Shared.Components.Buttons
 @using ProjectAveryFrontend.Shared.Components.Sidebar
