--- a/Shared/Components/Sidebar/Sidebar.razor
+++ b/Shared/Components/Sidebar/Sidebar.razor
@@ -1,5 +1,5 @@
 ﻿@using ProjectAveryCommon.Model.Entity.Pocos
-<div class="w-80 flex flex-col text-label overflow-hidden">
+<div class="w-80 flex flex-col text-label">
     @* Part over server list *@
     <div class="bg-forkBlue flex py-2 px-4 items-center" style="height: 50px">
         <div class="flex-1 flex flex-col">
@@ -14,9 +14,9 @@
     </div>
 
     @* Server List *@
-    <div class="bg-forkBlue-light flex-1 mt-5 flex flex-col overflow-y-auto scroll-left">
+    <div class="bg-forkBlue-light flex-1 mt-5 flex flex-col">
         @* Server *@
-        <div class="flex-1">
+        <div class="flex-1 overflow-y-auto scroll-left">
             @if (Entities != null)
             {
                 @foreach (var entity in Entities)
