Adjusted UI for consistency

--- a/Shared/Components/Entity/Entity.razor
+++ b/Shared/Components/Entity/Entity.razor
@@ -14,11 +14,11 @@
             @* Entity Overview *@
             <div class="flex-1 max-w-3xl p-2 bg-forkBlue flex justify-between items-center">
                 <div class="flex gap-2 p-1">
-                    <IconButton Size="24" IconSize="13" IconChar="'s'"></IconButton>
-                    <IconButton Size="24" IconSize="12" IconChar="'h'"></IconButton>
-                    <IconButton Size="24" IconSize="12" IconChar="'r'"></IconButton>
+                    <IconButton Size="25" IconSize="11" IconChar="'s'"></IconButton>
+                    <IconButton Size="25" IconSize="9" IconChar="'h'"></IconButton>
+                    <IconButton Size="25" IconSize="13" IconChar="'r'"></IconButton>
                 </div>
-                <span class="font-bold text-lg text-label whitespace-nowrap">@SelectedEntity?.Name</span>
+                <span class="font-bold text-md text-label whitespace-nowrap">@SelectedEntity?.Name</span>
                 <IconButton Size="30" NoBackground="true" IconChar="'D'" IconSize="19" HoverColor="text-red"></IconButton>
             </div>
         </div>
