--- a/Shared/Components/Sidebar/SidebarEntity.razor
+++ b/Shared/Components/Sidebar/SidebarEntity.razor
@@ -8,8 +8,8 @@
     <span class="icon px-3 text-2xl">1</span>
     @* Content *@
     <div class="flex-1">
-        <p>@Value.Name</p>
-        <p>0/100</p>
+        <p class="text-md">@Value.Name</p>
+        <p class="text-sm">0/100</p>
     </div>
     @* Selected Indicator *@
     <SelectedIndicatorVertical IsVisible="IsSelected" ParentHeight="72" NegativeYMargins="3"></SelectedIndicatorVertical>
