--- a/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleTab.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleTab.razor
@@ -24,7 +24,7 @@
 
 @code {
 
-    [CascadingParameter(Name = "SelectedEntity")]
+    [CascadingParameter]
     public IEntity? Entity { get; set; }
 
 }
