Added Performance Monitors

--- a/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleIn.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleIn.razor
@@ -2,7 +2,7 @@
 @inject IEntityConnectionService _entityConnection
 
 <EditForm Model="@InputForm" OnSubmit="OnSubmit">
-    <div class="console-in-container flex h-12">
+    <div class="console-in-container clipping flex h-12">
         <Checkbox class="self-start" @bind-Value="@InputForm.SayMode" DisplayName="Chat"></Checkbox>
         <div class="flex-1 flex mx-6 self-center">
             <span class="text-label mr-1 monospace">@Prefix</span>
