--- a/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleTab.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleTab.razor
@@ -16,9 +16,12 @@
 
     @* Hardware Stats *@
     <div class="flex flex-col gap-4">
-        <p>CPU</p>
-        <p>RAM</p>
-        <p>Uptime</p>
+        <PerformanceMonitor Content="30" SubTitle="%" Name="CPU" Color="Green"></PerformanceMonitor>
+        <div>
+            <PerformanceMonitor Content="2" SubTitle="%" Name="RAM" Color="Green"></PerformanceMonitor>
+            <span>2048 MB ...</span>
+        </div>
+        <PerformanceMonitor Content="59:59" SubTitle="H:M" Name="UP\nTIME" Color="Green"></PerformanceMonitor>
     </div>
 </div>
 
