--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -39,28 +39,53 @@
         clip-path: polygon(0 0, 100% 0, 100% 75%, 75% 100%, 0 100%);
     }
 
-    .console-out-container, .console-in-container {
+    .clipping {
         position: relative;
     }
 
-    .console-out-container::before, .console-in-container::before {
+    .clipping::before, .clipping::before {
         content: "";
         position: absolute;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
-        clip-path: polygon(0 0, calc(100% - 136px) 0, calc(100% - 90px) 48px, 100% 48px, 100% 100%, 0 100%);
         @apply bg-forkBlue-dark;
     }
 
-    .console-out-container > div, .console-in-container > div {
+    .clipping > div, .clipping > div {
         z-index: 1;
         position: relative;
     }
 
+    .console-out-container::before {
+        clip-path: polygon(0 0, calc(100% - 136px) 0, calc(100% - 90px) 48px, 100% 48px, 100% 100%, 0 100%);
+    }
+
     .console-in-container::before {
         clip-path: polygon(0 25px, 50px 25px, 75px 0, 100% 0, 100% 100%, 0 100%);
+    }
+
+    .performance-background::before {
+        clip-path: polygon(0 0, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%);
+    }
+
+    .performance-circle::before {
+        @apply w-16;
+        @apply h-16;
+        @apply rounded-full;
+        @apply bg-opacity-20 !important;
+        @apply bg-status-green;
+    }
+
+    .console-text > div::selection {
+        background: theme('colors.text.selection');
+        @apply text-text-selected;
+    }
+
+    .console-text > div::-moz-selection {
+        background: theme('colors.text.selection');
+        @apply text-text-selected;
     }
 
 
