--- a/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleIn.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleIn.razor
@@ -1,4 +1,5 @@
 ﻿@using ProjectAveryFrontend.Logic.Services.Connections
+@using ProjectAveryCommon.Model.Entity.Pocos
 @inject IEntityConnectionService _entityConnection
 
 <EditForm Model="@InputForm" OnSubmit="OnSubmit">
@@ -12,13 +13,17 @@
 </EditForm>
 
 @code {
+
+    [CascadingParameter]
+    public IEntity Entity { get; set; }
+
     private ConsoleInput InputForm { get; set; } = new();
 
     private string Prefix => InputForm.SayMode ? "/say " : "/";
 
     private async Task OnSubmit()
     {
-        if (await _entityConnection.SubmitConsoleInAsync($"{Prefix}{InputForm.Input}"))
+        if (await _entityConnection.SubmitConsoleInAsync($"{Prefix}{InputForm.Input}", Entity.Id))
         {
             InputForm.Input = "";
         }
